[package]
name = "memory-monitor"
version = "0.1.3"
edition = "2021"
description = "A memory monitor and auto-cleaner with Growl/GNTP notification support"
license = "MIT"
readme = "README.md"
repository = "https://github.com/cumulus13/memory-monitor"
homepage = "https://github.com/cumulus13/memory-monitor"
documentation = "https://docs.rs/memory-monitor"
keywords = ["memory", "monitor", "growl", "gntp", "notification"]
categories = ["command-line-utilities", "os"]
authors = ["Hadi Cahyadi <cumulus13@gmail.com>"]

[dependencies]
gntp = "0.1.11"
sysinfo = "0.29"
chrono = "0.4"
configparser = "3.0"
termcolor = "1.4"
crossterm = "0.27"
ctrlc = "3.5"

# Native OS memory APIs — each is only compiled on its target platform.
[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "macos")'.dependencies]
libc = "0.2"

# windows-sys gives us access to Win32 APIs via safe, generated FFI bindings.
# We use it for EnumProcesses / EmptyWorkingSet / NtSetSystemInformation.
[target.'cfg(target_os = "windows")'.dependencies]
# windows-sys is a lightweight, feature-gated crate; we only pull what we need.
windows-sys = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
    "Win32_System_Memory",
] }

[dev-dependencies]
tempfile = "3.0"

[[bin]]
name = "memory-monitor"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true